--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
+    "build": "ncc build src/server.js -o dist"
   },
   "keywords": [],
   "author": "",
   "license": "",
   "dependencies": {
+    "@vercel/ncc": "^0.33.3",
     "axios": "^0.26.1",
     "body-parser": "1.19.0",
     "express": "4.17.1",
